[metadata]
name = napari-ros
version = 0.1.0
author = Alan Liddell
classifiers = 
    Framework :: napari

[options]
packages = find:
include_package_data = True
install_requires = 
    napari

[options.entry_points]
napari.manifest = 
    napari-ros = napari_ros:napari.yaml

[develop]
script_dir=$base/lib/napari_ros

[install]
install_scripts=$base/lib/napari_ros
